--- a/rules.html
+++ b/rules.html
@@ -183,7 +183,7 @@
                         <li>Each team must provide valid college ID proofs during registration.</li>
                         <li>Limited teams are allowed once the registration limit is reached the registraion link will be closed.</li>
                         <li>No On-spot Registration </li>
-                        <li>Last Date For Registrain is 25th August 2025</li>
+                        <li>Last Date For Registration is 25th August 2025</li>
 
                     </ul>
                 </div>
